# realestate-ai-companion

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
articles/: INDEX.md
docs/: article-skill-map.md  changelog.md
plugins/companion/.claude-plugin/: plugin.json
plugins/companion/commands/: inheritance.md  prepare.md
plugins/companion/skills/inheritance-hotspots/: SKILL.md
plugins/companion/skills/inheritance-hotspots/data/: tokyo23_2025.csv
plugins/companion/skills/inheritance-hotspots/scripts/: README.md  fetch_estat.py  fetch_landprice.py  prepare.py  score.py
