[project]
name = "realestate-ai-companion"
version = "1.1.2"
description = "不動産業のAI伴走者 — 公開API×Claudeで物件分析・業務再設計"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "etsurouwatanabe-tech"}
]
dependencies = [
    "httpx>=0.27",
    "dbfread>=2.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/etsurouwatanabe-tech/realestate-ai-companion"
Repository = "https://github.com/etsurouwatanabe-tech/realestate-ai-companion"
